--- a/app/src/main/res/layout/activity_send_comment.xml
+++ b/app/src/main/res/layout/activity_send_comment.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:id="@+id/page"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,6 +16,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
 
             <include
                 android:id="@+id/toolbar"
@@ -50,6 +50,8 @@
                         android:background="@drawable/background_button_message_blue2"
                         android:orientation="vertical"
                         android:visibility="gone">
+
+
 
                         <TextView
                             android:id="@+id/textView20"
@@ -143,11 +145,11 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/title"
+                            android:id="@+id/textView8"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/casablanca"
-                            android:text="دسته بندی آموزشی"
+                            android:text="ثبت نظر"
                             android:textColor="@color/blue_900"
                             android:textSize="18sp" />
 
@@ -166,39 +168,7 @@
 
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/sendBtn"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:background="@drawable/background_button_gradiunt_blue"
-                        android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/titleBtn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="10dp"
-                            android:layout_weight="1"
-                            android:fontFamily="@font/casablanca"
-                            android:text="ذخیره"
-                            android:textColor="#ffffff" />
-
-                        <TextView
-                            android:id="@+id/textView18"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginEnd="10dp"
-                            android:fontFamily="sans-serif"
-                            android:gravity="center"
-                            android:text="✓"
-                            android:textColor="@color/light_green_A400"
-                            android:textSize="18sp" />
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -228,7 +198,7 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_weight="1"
                                     android:fontFamily="@font/casablanca"
-                                    android:text="وضعیت ورودی"
+                                    android:text="مرتب سازی"
                                     android:textColor="#ffffff"
                                     android:textSize="16sp" />
 
@@ -268,64 +238,10 @@
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="10dp"
                                 android:visibility="gone"
-                                tools:visibility="visible" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_margin="10dp"
-                            android:layout_weight="0.5"
-                            android:orientation="vertical"
-                            android:visibility="gone">
-
-                            <LinearLayout
-                                android:id="@+id/categoryBtn"
-                                android:layout_width="match_parent"
-                                android:layout_height="40dp"
-                                android:background="@drawable/background_edittext_gray"
-                                android:orientation="horizontal">
-
-                                <EditText
-                                    android:id="@+id/edtSearch"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="match_parent"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_marginStart="10dp"
-                                    android:layout_weight="1"
-                                    android:background="#cacaca"
-                                    android:fontFamily="@font/casablanca"
-                                    android:hint="جستجو"
-                                    android:singleLine="true"
-                                    android:textColor="#000000"
-                                    android:textColorHint="#ffffff"
-                                    android:textSize="16sp" />
-
-                                <ImageView
-                                    android:id="@+id/sub_toggle_button_category"
-                                    android:layout_width="40dp"
-                                    android:layout_height="40dp"
-                                    android:layout_alignTop="@+id/defect_checkBox"
-                                    android:layout_alignBottom="@+id/defect_checkBox"
-                                    android:layout_alignParentEnd="true"
-                                    android:layout_marginEnd="10dp"
-                                    android:padding="7dp"
-                                    android:visibility="visible"
-                                    app:srcCompat="?android:attr/actionModeWebSearchDrawable"
-                                    tools:ignore="NewApi" />
-
-                            </LinearLayout>
-
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/viewPostion"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginTop="10dp"
-                                android:visibility="gone"
                                 tools:visibility="gone" />
 
                         </LinearLayout>
+
                     </LinearLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -337,52 +253,103 @@
                         android:layout_marginBottom="10dp"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/warninTxt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/view14"
-                            android:layout_alignParentStart="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentBottom="true"
-                            android:fontFamily="@font/iransans"
-                            android:text="@string/noData"
-                            android:textColor="@color/gray"
-                            android:textSize="12sp"
-                            android:visibility="gone"
-                            app:layout_constraintBottom_toBottomOf="@+id/viewAttach"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.486"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/viewAttach" />
-
-                        <ProgressBar
-                            android:id="@+id/progressBarRow4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:indeterminateDrawable="@drawable/progress_bar_states"
-                            android:visibility="visible"
+                        <EditText
+                            android:id="@+id/edt1"
+                            android:layout_width="0dp"
+                            android:layout_height="300dp"
+                            android:background="@drawable/background_edittext_gray"
+                            android:ems="10"
+                            android:fontFamily="@font/iranyekan"
+                            android:gravity="right|top"
+                            android:hint="تایپ نمائید..."
+                            android:inputType="textPersonName"
+                            android:padding="10dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/viewAttach" />
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/viewAttach"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            tools:visibility="visible" />
-
+                            app:layout_constraintVertical_bias="0.0" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
 
+                        <LinearLayout
+                            android:id="@+id/sendBtn"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:layout_marginBottom="20dp"
+                            android:layout_weight="0.5"
+                            android:background="@drawable/background_button_gradiunt_blue"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView17"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="10dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/casablanca"
+                                android:text="ثبت"
+                                android:textColor="#ffffff" />
+
+                            <TextView
+                                android:id="@+id/textView18"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:fontFamily="sans-serif"
+                                android:gravity="center"
+                                android:text="✓"
+                                android:textColor="@color/light_green_A400"
+                                android:textSize="18sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/backBtn"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:layout_marginBottom="20dp"
+                            android:layout_weight="0.5"
+                            android:background="@drawable/background_item_orange_border"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView17"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="10dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/casablanca"
+                                android:text="بازگشت"
+                                android:textColor="#000000" />
+
+                            <TextView
+                                android:id="@+id/textView18"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:fontFamily="sans-serif"
+                                android:gravity="center"
+                                android:text="×"
+                                android:textColor="@color/red_800"
+                                android:textSize="18sp" />
+                        </LinearLayout></LinearLayout>
 
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
@@ -434,6 +401,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
