--- a/app/src/main/res/layout/activity_send_post.xml
+++ b/app/src/main/res/layout/activity_send_post.xml
@@ -530,7 +530,7 @@
                             android:visibility="visible">
 
                             <LinearLayout
-                                android:id="@+id/postBtn"
+                                android:id="@+id/takhsisGroupBtn"
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
                                 android:background="@drawable/background_button_message_orange2"
@@ -544,7 +544,7 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_weight="1"
                                     android:fontFamily="@font/casablanca"
-                                    android:text="شماره پست"
+                                    android:text="تخصیص به گروه"
                                     android:textColor="#ffffff"
                                     android:textSize="16sp" />
 
@@ -564,7 +564,7 @@
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <ImageView
-                                    android:id="@+id/sub_toggle_button_category2"
+                                    android:id="@+id/sub_toggle_button_takhsis_groups"
                                     android:layout_width="24dp"
                                     android:layout_height="24dp"
                                     android:layout_alignTop="@+id/defect_checkBox"
@@ -579,12 +579,30 @@
                             </LinearLayout>
 
                             <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/viewCategory"
+                                android:id="@+id/viewtakhsisgroup"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
                                 android:visibility="gone" />
 
+                            <ProgressBar
+                                android:id="@+id/progressBarRow3"
+                                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/View1"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/View1"
+                                tools:visibility="visible" />
                         </LinearLayout>
                     </LinearLayout>
                     <LinearLayout
