--- a/app/src/main/res/layout/activity_show_post.xml
+++ b/app/src/main/res/layout/activity_show_post.xml
@@ -204,7 +204,7 @@
                                 app:srcCompat="@mipmap/icon3" />
 
                             <TextView
-                                android:id="@+id/textView25"
+                                android:id="@+id/CountView"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
@@ -217,6 +217,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/commentBtn"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
