--- a/app/src/main/res/layout/bottom_navigation3.xml
+++ b/app/src/main/res/layout/bottom_navigation3.xml
@@ -34,11 +34,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:layout_weight="0.2">
+                android:layout_weight="0.2"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <View
                     android:id="@+id/view1"
@@ -112,8 +113,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:layout_weight="0.2">
+                android:layout_weight="0.2"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <View
                     android:id="@+id/view2"
@@ -129,6 +130,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:visibility="visible" />
+
                 <TextView
                     android:id="@+id/badge2"
 
@@ -229,12 +231,12 @@
             </LinearLayout>
 
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/postlayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:layout_weight="0.2">
+                android:layout_weight="0.2"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <View
                     android:id="@+id/view4"
@@ -250,6 +252,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:visibility="visible" />
+
                 <TextView
                     android:id="@+id/badge3"
                     android:layout_width="18dp"
@@ -305,11 +308,12 @@
                         android:textSize="9sp" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:layout_height="match_parent"
-                android:layout_weight="0.2">
+                android:layout_weight="0.2"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <View
                     android:id="@+id/view5"
@@ -325,6 +329,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:visibility="visible" />
+
                 <TextView
                     android:id="@+id/badge4"
                     android:layout_width="18dp"
