--- a/app/src/main/res/layout/viewholder_comment1.xml
+++ b/app/src/main/res/layout/viewholder_comment1.xml
@@ -8,10 +8,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/background_insert_ads"
         android:orientation="vertical"
         android:visibility="visible"
@@ -39,7 +40,8 @@
                 android:fontFamily="@font/dimafred"
                 android:text="1"
                 android:textColor="@color/blue_900"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,7 +59,8 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="10dp"
                     android:fontFamily="@font/iranyekanmedium"
-                    android:singleLine="true"
+                    android:inputType="textMultiLine"
+                    android:singleLine="false"
                     android:text="عنوان"
                     android:textColor="@android:color/black"
                     android:textDirection="rtl"
@@ -79,10 +82,11 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <CheckBox
-                    android:id="@+id/checkBox2"
+                    android:id="@+id/checkBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
