--- a/app/src/main/res/layout/viewholder_video_play.xml
+++ b/app/src/main/res/layout/viewholder_video_play.xml
@@ -40,7 +40,7 @@
                 android:paddingStart="10dp"
                 android:text="گزینه 1"
                 android:textColor="@color/white"
-                android:textDirection="rtl"
+                android:textDirection="locale"
                 android:textSize="13sp" />
 
             <LinearLayout
